# C-process-raw-data

./: CMakeLists.txt  LICENSE  README.md
data/: 150_steps_dirtroad.txt  150_steps_dirtroad_raw.txt
src/: main.c
